--- a/Modules/epos/templates/xfce4-panel.xml.kms.erb
+++ b/Modules/epos/templates/xfce4-panel.xml.kms.erb
@@ -8,23 +8,19 @@
       <property name="length" type="uint" value="100"/>
       <property name="position-locked" type="bool" value="true"/>
       <property name="plugin-ids" type="array">
-        <value type="int" value="1"/>
         <value type="int" value="4"/>
-        <value type="int" value="6"/>
         <value type="int" value="7"/>
-        <value type="int" value="11"/>        
-	      <value type="int" value="8"/>
+        <value type="int" value="13"/>
         <value type="int" value="3"/>
-        <value type="int" value="12"/>
+        <value type="int" value="11"/>
         <value type="int" value="5"/>
         <value type="int" value="9"/>
         <value type="int" value="10"/>
+        <value type="int" value="8"/>
       </property>
     </property>
   </property>
   <property name="plugins" type="empty">
-  <property name="plugin-1" type="string" value="applicationsmenu"/>
-   <property name="plugin-2" type="string" value="actions"/>
    <property name="plugin-3" type="string" value="tasklist"/>
     <property name="plugin-5" type="string" value="xfce4-orageclock-plugin"/>
     <property name="plugin-4" type="string" value="launcher">
@@ -32,9 +28,9 @@
         <value type="string" value="Extranet.desktop"/>
       </property>
     </property>
-    <property name="plugin-6" type="string" value="launcher">
+    <property name="plugin-13" type="string" value="launcher">
       <property name="items" type="array">
-        <value type="string" value="Email.desktop"/>
+        <value type="string" value="EPOS_app.desktop"/>
       </property>
     </property>
     <property name="plugin-7" type="string" value="launcher">
@@ -42,17 +38,7 @@
         <value type="string" value="Website.desktop"/>
       </property>
     </property>
-    <property name="plugin-8" type="string" value="launcher">
-      <property name="items" type="array">
-        <value type="string" value="Help.desktop"/>
-      </property>
-    </property>
-    <property name="plugin-11" type="string" value="launcher">
-      <property name="items" type="array">
-        <value type="string" value="ScanControl.desktop"/>
-      </property>
-    </property>
-    <property name="plugin-12" type="string" value="separator">
+    <property name="plugin-11" type="string" value="separator">
       <property name="expand" type="bool" value="true"/>
       <property name="style" type="uint" value="0"/>
     </property>
@@ -65,7 +51,10 @@
       <property name="items" type="array">
         <value type="string" value="PowerControl.desktop"/>
       </property>
+      <property name="plugin-8" type="string" value="launcher">
+      <property name="items" type="array">
+        <value type="string" value="kms.desktop"/>
+      </property>
     </property>
   </property>
-<property name="configver" type="int" value="2"/>
 </channel>
